Actualizar codigo autogenerado y especificación
